# chorus

./: .gitignore  CLAUDE.md  LICENSE  README.md  Taskfile.yml  docker-compose.yml
.claude/skills/chorus/: SKILL.md
backend/: Dockerfile  alembic.ini  conftest.py  pyproject.toml  requirements.txt
backend/app/: exceptions.py  main.py
backend/app/api/routes/: atomic.py  discovery.py  locks.py  projects.py  tasks.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 01b96d02ccc7_add_idempotency_records.py  de3ce00bd136_initial_schema.py
backend/app/models/: __init__.py  base.py  commit.py  idempotency.py  lock.py  project.py  task.py  work_log.py
backend/app/schemas/: atomic.py  commit.py  discovery.py  errors.py  export.py  lock.py  project.py  task.py  work_log.py
backend/app/services/: atomic_service.py  discovery_service.py  lock_service.py  project_service.py  task_service.py
backend/tests/: test_atomic.py  test_discovery.py  test_errors.py  test_export.py  test_locks.py  test_projects.py  test_tasks.py
docker/: init-test-db.sql
docs/: architecture.md  phases.md
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  hooks.ts  types.ts
frontend/src/components/: Badge.tsx  CommitList.tsx  ErrorMessage.tsx  Layout.tsx  Spinner.tsx  TaskCard.tsx  TaskDetailPanel.tsx  TaskTreeRow.tsx  WorkLogTimeline.tsx
frontend/src/views/: KanbanBoard.tsx  (+4 more)
skills/chorus/: SKILL.md
