[project]
name = "chorus-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi~=0.129.0",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]~=2.0.46",
    "asyncpg",
    "alembic",
    "pydantic~=2.10.0",
    "pydantic-settings",
]

[dependency-groups]
dev = [
    "pytest~=8.3.0",
    "pytest-asyncio~=0.24.0",
    "httpx~=0.28.0",
    "ruff~=0.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
